Added css file and adjusted stiles

--- a/homework/internetshop/contacts/contacts.html
+++ b/homework/internetshop/contacts/contacts.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <ul>a. <a href="../index.html">Главная</a></ul>
-    <ul>b. <a href="../catalog/catalog.html">Каталог</a></ul>
-    <ul>c. <a href="contacts.html">Контакты</a></ul>
-    <h1>Кафе на Дворянской</h1>
-    <h2>Адрес: </h2>
-    <p>г. Владимир, ул. Дворянская 10</p>
-    <h2>Телефон</h2>
-    <p>8 (4922) 45-18-35</p>
+    <ul>
+        <li><a class="menu" href="../index.html">Главная</a></li>
+        <li><a class="menu" href="../catalog/catalog.html">Каталог</a></li>
+        <li><a class="menu" href="contacts.html">Контакты</a></li>
+    </ul>
+    <h1 class="title">Кафе на Дворянской</h1>
+    <h2 class="subtitle">Адрес: </h2>
+    <p class="text">г. Владимир, ул. Дворянская 10</p>
+    <h2 class="subtitle">Телефон</h2>
+    <p class="text">8 (4922) 45-18-35</p>
     
 </body>
 </html>
